# admin-platform

./: .dockerignore  .env.example  .gitignore  .importlinter  .mailmap  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  MYSQL_MIGRATION_REPORT.md  Makefile  README.md  SECURITY.md  alembic.ini  compose.yaml  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml  e2e.yml  frontend.yml
doc/: INDEX.md  PROJECT_OVERVIEW.md
doc/architecture/: DATA_MODEL.md  EXAMPLE_DOMAIN.md  LAYERED_DESIGN.md  MULTI_TENANCY.md  OBSERVABILITY.md  REQUEST_LIFECYCLE.md
doc/archive/: EVOLUTION.md  REVIEW_HISTORY.md
doc/operations/: CI_MIGRATION.md  DEPENDENCY_UPGRADE.md  DEPLOYMENT.md  LOCAL_SETUP.md  RUNBOOK.md  UNATTENDED_EXECUTION.md
doc/reference/: CROSS_LANGUAGE_ADR.md  EXTERNAL_LINKS.md
doc/standards/: AI_CODING_RULES.md  CODE_GENERATOR.md  DATA_MODELING.md  NAMING_CONVENTIONS.md
doc/tech-debt/: KNOWN_DEVIATIONS.md
docs/: INDEX.md  PROJECT_OVERVIEW.md  STANDARDS.md
docs/architecture/: DATA_MODEL.md  ERROR_RESPONSE.md  GLOSSARY.md  LAYERED_DESIGN.md  MULTI_TENANCY.md  REQUEST_LIFECYCLE.md
docs/archive/: EVOLUTION.md  REVIEW_HISTORY.md
docs/archive/specs/: 2026-06-02-p0-multitenant-auth-foundation.md  2026-06-05-p1.0-rbac-mechanism.md  2026-06-09-p1.5-rbac-binding-audit.md  2026-06-09-p3-operational-config.md  2026-06-11-p5-excel-import-export.md  2026-06-11-p6-frontend-design.md  2026-06-11-p6.0-frontend-baseline.md  (+2 more)
docs/guide/: ARCHITECTURE_TOUR.md  GETTING_STARTED.md  USE_AS_SCAFFOLD.md
docs/operations/: CI_MIGRATION.md  DEPENDENCY_UPGRADE.md  DEPLOYMENT.md  LOCAL_SETUP.md  RUNBOOK.md  UNATTENDED_EXECUTION.md
docs/reference/: CROSS_LANGUAGE_ADR.md  EXTERNAL_LINKS.md
docs/specs/: 2026-06-02-p0-multitenant-auth-foundation.md  2026-06-04-ruoyi-parity-roadmap.md  2026-06-05-p1.0-rbac-mechanism.md  2026-06-09-p1.4-login-enhancement.md  2026-06-09-p1.5-rbac-binding-audit.md  2026-06-09-p2-audit-persistence.md  2026-06-10-p4-monitoring-tasks.md  2026-06-11-p5-excel-import-export.md  2026-06-11-p5-file-management.md  2026-06-11-p6-frontend-design.md  INDEX.md
docs/standards/: AI_CODING_RULES.md  CODE_GENERATOR.md  DATA_MODELING.md  NAMING_CONVENTIONS.md
docs/tech-debt/: KNOWN_DEVIATIONS.md  OPEN_QUESTIONS.md
examples/k8s/: README.md  deployment.yaml
frontend/: .dependency-cruiser.cjs  .gitignore  .oxlintrc.json  README.md  eslint.config.ts  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts  vitest.config.ts  webpack-resolve.cjs
frontend/e2e/: login.spec.ts  vue.spec.ts
frontend/openapi/: admin-platform.json
frontend/src/: App.vue  main.ts
migrations/: env.py  script.py.mako
migrations/versions/: 0001_baseline.py  0002_create_todo.py  0002_p0_tenant_user.py  0002_users.py  0003_create_tag_and_todo_tags.py  0003_one_super_admin.py  0004_p1_depts.py  0005_p1_roles.py  0006_p1_menus.py  0007_p1_posts.py  0008_user_status_check.py  0009_menu_seed_key.py  0010_p1_4_refresh_tokens.py  0011_p2_audit_events.py  0012_p2_login_logs.py  0013_p3_notices.py  0014_p3_configs.py  0015_p3_dicts.py  0016_p4c_scheduled_tasks.py  0017_hardening_refresh_family_absolute.py  0018_hardening_scheduled_claim_check.py  0019_p5_file_management.py  0020_log_pagination_indexes.py  0021_mysql_app_locks.py  f499852e96f8_p1_depts.py  f5fa7c3baa18_p1_roles.py.autogen-removed
scripts/: __init__.py  dump_openapi.py  dump_schema.py  mysql_phase0_poc.py  mysql_phase3_verify.py  new_module.py  run_mysql_phase0_poc.sh  smoke_generator.sh
scripts/unattended/: README.md  queue.json  supervisor.sh
src/admin_platform/: __init__.py  cli.py  main.py
tests/: conftest.py
tests/api/: _support.py  test_access_log.py  test_auth.py  test_auth_context.py  test_config_api.py  test_cors.py  test_dept_api.py  test_dict_api.py  test_errors.py  test_file_api.py  test_health.py  test_list_endpoint_smoke_contract.py  test_menu_api.py  test_monitor_metrics_api.py  test_monitor_online_api.py  test_notice_api.py  test_otel.py  test_post_api.py  test_role_api.py  test_scheduled_task_api.py  test_tag_api.py  test_todo_api.py  test_user_api.py
tests/contracts/: getinfo_super_admin.json  getrouters_system.json  seed_page_components.json
tests/integration/: conftest.py  db_cleanup.py  test_audit_persistence.py  test_auth_captcha_ratelimit.py  test_auth_change_password.py  test_auth_login.py  test_auth_token_endpoints.py  test_cli.py  test_config_crud.py  test_datetime_utc.py  test_db_cleanup.py  test_db_smoke.py  test_dept_crud.py  test_dict_crud.py  test_file_crud.py  test_idempotency_redis.py  test_login_log.py  test_menu_crud.py  test_monitor_metrics_integration.py  test_monitor_online_integration.py  test_monitor_query.py  test_notice_crud.py  test_post_crud.py  test_rbac_binding.py  test_rbac_crud_audit.py  test_rbac_endpoints.py  test_rbac_seed.py  test_refresh_token.py  test_role_crud.py  test_scheduled_task_crud.py  test_scheduled_task_scheduler.py  test_tag_db.py  test_tenant_isolation.py  test_todo_db.py  test_transaction_commit.py  test_user_crud.py
tests/unit/: test_api_tests_use_transport_contract.py  test_apply_data_scope.py  test_audit_context.py  test_audit_event_contract.py  test_authz_scope.py  test_build_routers.py  test_cli.py  test_column_comments.py  test_config.py  test_config_service.py  test_current_user.py  test_db_locks.py  test_dept_service.py  test_dict_service.py  test_dump_openapi.py  test_excel.py  test_fastapi_query_binding_canary.py  test_file_service.py  test_file_storage.py  test_idempotency.py  test_integration_destructive_guard.py  test_logging.py  test_login_guard.py  test_login_guard_redis.py  test_menu_provider.py  test_menu_service.py  test_monitor_metrics_service.py  test_monitor_online_service.py  test_monitor_schemas.py  test_mysql_boolean_semantics.py  test_mysql_capabilities.py  test_new_module.py  test_notice_service.py  test_openapi_contract.py  test_pagination.py  test_permission_registry.py  test_post_excel.py  test_post_service.py  test_providers.py  test_rbac_audit.py  (+24 more)
(+303 files in other folders)
