[project]
name = "admin-platform"
version = "0.0.1"
description = "团队 Python Web 服务脚手架模板（FastAPI + uv + SQLAlchemy 2.x）"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    # v0.4.22 floor 提升：lockfile 已锁定的 minor 作为 floor，避免业务用
    # `uv add` 时被解析器拉一个被模板 deviation/守门测试不覆盖的旧版。
    "fastapi[standard]>=0.136",
    "pydantic>=2.13",
    "pydantic-settings>=2.14",
    "sqlalchemy[asyncio]>=2.0.49",
    "asyncpg>=0.31",
    "alembic>=1.18",
    "redis[hiredis]>=7.4",
    "pyjwt>=2.12.1",
    "opentelemetry-api>=1.41.1",
    "opentelemetry-sdk>=1.41.1",
    "opentelemetry-exporter-otlp-proto-http>=1.41.1",
    "argon2-cffi>=25,<26",
]

[project.optional-dependencies]
dev = [
    # Errata #2: pyright 必须显式声明为 dev 依赖才能 uv run pyright
    "pyright>=1.1.409",
    "ruff>=0.15",
    "pytest>=9",
    "pytest-asyncio>=1.3",
    "pytest-cov>=7",
    "pytest-mock>=3.15",
    "httpx>=0.28",
    # v0.4.16: .pre-commit-config.yaml 的 ``uv run pre-commit install`` 必须能
    # 直接跑通；之前 dev deps 没声明导致全新克隆的人撞 ``Failed to spawn``。
    "pre-commit>=4",
    # 依赖扫描（Errata #1）：用 uvx pip-audit 一次性跑也可，不强制入 dev
    "import-linter>=2.11,<3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/admin_platform"]

# ---- Ruff -------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py314"
src = ["src", "tests"]

[tool.ruff.lint]
# E/W:  pycodestyle      F:    pyflakes        I:   isort
# B:    flake8-bugbear   UP:   pyupgrade       RUF: ruff-specific
# SIM:  flake8-simplify  PL:   pylint
# S:    flake8-bandit (security) — hardcoded secrets / weak crypto /
#                                  shell=True / unsafe deserialization
# ASYNC: flake8-async — blocking I/O in async functions
# T20:  flake8-print — bans ``print()`` in production code
select = ["E", "W", "F", "I", "B", "UP", "RUF", "SIM", "PL", "S", "ASYNC", "T20"]
# E501：行长由 formatter 处理。
# RUF001/002/003（v0.5.1）：docstring 默认简体中文（AI_CODING_RULES.md §0），
# 中文排版用全角标点（，。：；「」（） 等），ruff 会误判为「同形字 ambiguous」。
# 同形字攻击不是本仓攻击面（私有代码 + 纯 docstring），关掉这三条不引入风险。
ignore = ["E501", "RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.per-file-ignores]
# Tests are allowed magic numbers + assert + weak crypto + print.
# S608 (SQL-injection): integration tests interpolate a constant scratch
# table name into ``text(...)`` — Postgres has no parameter binding for
# identifiers, and the value is a module-level literal so the warning is
# a false positive in this directory.
"tests/**" = [
    "PLR2004",
    "S101",
    "S105",
    "S106",
    "S311",
    "S608",
    "T201",
]
# Generator script must call ``print()`` for CLI feedback.
"scripts/new_module.py" = ["T201"]
# Schema-doc generator likewise reports progress via ``print()``.
"scripts/dump_schema.py" = ["T201"]
# 管理 CLI 通过 ``print()`` / stderr 给操作者反馈（Task 9 bootstrap 超管）。
"src/admin_platform/cli.py" = ["T201"]

# ---- Pytest -----------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--import-mode=importlib",
    "--strict-markers",
    "--strict-config",
    # 默认排除 integration——避免裸 `pytest` 在未起 docker compose 时失败。
    # 跑集成测试用 `make test-integration` 或 `pytest -m integration`（显式覆盖）。
    "-m",
    "not integration",
]
asyncio_mode = "auto"
markers = [
    "slow: 慢速测试，默认跳过",
    "integration: 集成测试，需要 docker compose 起依赖",
    "redis_integration: 需要真 Redis (docker compose --profile cache up)",
]

# ---- Coverage ---------------------------------------------------------------
[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
show_missing = true
# Real baseline coverage measured 2026-05-15 (v0.4.13) was 91% — set a tight
# 85% floor with a 6-point buffer so meaningful drops are blocked but normal
# noise (skipped test edge cases / try-final lines) doesn't flake CI.
fail_under = 85

# ---- Pyright (Errata #2) ----------------------------------------------------
[tool.pyright]
include = ["src", "tests"]
exclude = ["**/__pycache__", ".venv"]
pythonVersion = "3.14"
typeCheckingMode = "standard"

# ---- FastAPI CLI ------------------------------------------------------------
# Errata 精度修订：入口示例统一为 admin_platform.main:app（Phase B 启用）
[tool.fastapi]
entrypoint = "admin_platform.main:app"
